overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@
   }
 
   .parallax {
-    overflow: hidden;
     letter-spacing: -2px;
     line-height: 0.25;
     margin: 0;
